# esgraph

./: .gitignore  Cargo.toml  README.md
config/: default.toml  vm.default.toml  vm.env.example
crates/esgraph-core/: Cargo.toml
crates/esgraph-core/src/: config.rs  error.rs  events.rs  lib.rs  model.rs
crates/esgraph-esf/: Cargo.toml
crates/esgraph-esf/src/: collector.rs  error.rs  lib.rs  normalise.rs  subscribe.rs
crates/esgraph-store/: Cargo.toml
crates/esgraph-store/src/: cypher.rs  error.rs  ingest.rs  lib.rs  query.rs  schema.rs  store.rs
crates/esgraphd/: Cargo.toml
crates/esgraphd/src/: main.rs  replay.rs  writer.rs
docs/: ARCHITECTURE.md  cli.md  config.md  core.md  deployment.md  design-tradeoffs.md  esf.md  store.md  vm-setup.md
fixtures/: exec_chain.json  write_event.json
scripts/: debug-vm.sh  deploy-vm.sh  scenario-http-server.py  scenario-http-server.sh  simulate-vm.sh  stop-vm-collector.sh
scripts/attack-scenarios/: README.md
scripts/attack-scenarios/amos/: README.md  amos_stealer_chain.cleanup.sh  amos_stealer_chain.scenario.sh
scripts/attack-scenarios/apt29/: apt29_discovery.cleanup.sh  apt29_discovery.scenario.sh
scripts/attack-scenarios/lazarus/: lazarus_collection.cleanup.sh  lazarus_collection.scenario.sh
scripts/attack-scenarios/oilrig/: oilrig_uipc_probe.cleanup.sh  oilrig_uipc_probe.scenario.sh
scripts/attack-scenarios/wizard-spider/: wizard_spider_staging.cleanup.sh  wizard_spider_staging.scenario.sh
