[package]
name = "esgraph-core"
description = "Shared configuration, event model, and types for the esgraph ESF→graph pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
