[package]
name = "esgraph-store"
description = "LadybugDB graph storage layer for esgraph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
esgraph-core = { path = "../esgraph-core" }
lbug = "0.15.4"
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
